--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,10 @@ on:
 
 name: Upload Release Asset
 
+env:
+  CARGO_TERM_COLOR: always
+  DEVELOPER_DIR: /Applications/Xcode_12.0.1.app/Contents/Developer
+
 jobs:
   build:
     name: Upload Release Asset
